new API Definition YAML file, including process video endpoint
