# API_definition_BJJ_Processing.yaml
@@ -2,37 +2,20 @@ openapi: 3.0.0
 info:
   title: BJJ Image Processing API
   version: 1.0.0
-  description: API for uploading and processing BJJ images
+  description: API for uploading and processing BJJ images and videos
 
 paths:
   /get_upload_url:
     get:
-      summary: Get a pre-signed URL for image upload
-      operationId: getUploadUrl
-      responses:
-        '200':
-          description: Successful response
-          content:
-            application/json:    
-              schema:
-                type: object
-                properties:
-                  upload_url:
-                    type: string
-                  file_name:
-                    type: string
-      x-amazon-apigateway-integration:
-        uri: http://52.72.247.7:5000/get_upload_url
-        passthroughBehavior: when_no_match
-        httpMethod: GET
-        type: http_proxy
-
-  /get_result:
-    get:
-      summary: Get the processing result for an image
-      operationId: getResult
+      summary: Get a pre-signed URL for file upload
       parameters:
-        - name: file_name
+        - name: file_type
+          in: query
+          required: true
+          schema:
+            type: string
+            enum: [image, video]
+        - name: user_id
           in: query
           required: true
           schema:
@@ -45,27 +28,119 @@ paths:
               schema:
                 type: object
                 properties:
-                  keypoints_file:
+                  presigned_post:
+                    type: object
+                  file_name:
                     type: string
+                  job_id:
+                    type: string
+                  user_id:
+                    type: string
+        '400':
+          description: Bad request
+        '500':
+          description: Server error
+      x-amazon-apigateway-integration:
+        uri: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${LambdaFunctionArn}/invocations
+        passthroughBehavior: when_no_match
+        httpMethod: POST
+        type: aws_proxy
+
+  /process_image:
+    post:
+      summary: Process an uploaded image
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                file_name:
+                  type: string
+                job_id:
+                  type: string
+                user_id:
+                  type: string
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:    
+              schema:
+                type: object
+                properties:
                   status:
                     type: string
-                  position:
+                  keypoint_image_url:
+                    type: string
+                  keypoints_json_url:
+                    type: string
+                  predicted_position:
+                    type: string
+                  job_id:
+                    type: string
+        '400':
+          description: Bad request
+        '500':
+          description: Server error
+      x-amazon-apigateway-integration:
+        uri: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${LambdaFunctionArn}/invocations
+        passthroughBehavior: when_no_match
+        httpMethod: POST
+        type: aws_proxy
+
+  /process_video:
+    post:
+      summary: Process an uploaded video
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                video_file_name:
+                  type: string
+                job_id:
+                  type: string
+                user_id:
+                  type: string
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:    
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                  job_id:
+                    type: string
+                  user_id:
                     type: string
                   message:
                     type: string
+        '500':
+          description: Server error
       x-amazon-apigateway-integration:
-        uri: http://52.72.247.7:5000/get_result
+        uri: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${LambdaFunctionArn}/invocations
         passthroughBehavior: when_no_match
-        httpMethod: GET
-        type: http_proxy
+        httpMethod: POST
+        type: aws_proxy
 
   /get_job_status/{job_id}:
     get:
       summary: Get the status of a job
-      operationId: getJobStatus
       parameters:
         - name: job_id
           in: path
+          required: true
+          schema:
+            type: string
+        - name: user_id
+          in: query
           required: true
           schema:
             type: string
@@ -77,36 +152,45 @@ paths:
               schema:
                 type: object
                 properties:
+                  PK:
+                    type: string
+                  SK:
+                    type: string
                   status:
                     type: string
-                  image_url:
+                  file_type:
                     type: string
-                  keypoints_url:
+                  file_name:
+                    type: string
+                  updatedAt:
                     type: string
                   position:
                     type: string
+                  s3_path:
+                    type: string
         '404':
           description: Job not found
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
+        '400':
+          description: Bad request
         '500':
           description: Server error
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
       x-amazon-apigateway-integration:
-        uri: http://52.72.247.7:5000/get_job_status/{job_id}
+        uri: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${LambdaFunctionArn}/invocations
         passthroughBehavior: when_no_match
-        httpMethod: GET
-        type: http_proxy
-        requestParameters:
-          integration.request.path.job_id: method.request.path.job_id
+        httpMethod: POST
+        type: aws_proxy
+
+components:
+  securitySchemes:
+    CognitoAuth:
+      type: apiKey
+      name: Authorization
+      in: header
+      x-amazon-apigateway-authtype: cognito_user_pools
+      x-amazon-apigateway-authorizer:
+        type: cognito_user_pools
+        providerARNs:
+          - arn:aws:cognito-idp:${AWS::Region}:${AWS::AccountId}:userpool/${UserPoolId}
+
+security:
+  - CognitoAuth: []
